--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1214,8 +1214,12 @@ video {
   margin-top: 2rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .box-border {
@@ -1344,6 +1348,10 @@ video {
   height: 98px;
 }
 
+.h-auto {
+  height: auto;
+}
+
 .h-full {
   height: 100%;
 }
@@ -1359,14 +1367,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-auto {
-  height: auto;
-}
-
-.h-12 {
-  height: 3rem;
 }
 
 .max-h-\[334px\] {
@@ -1400,6 +1400,10 @@ video {
 .min-h-max {
   min-height: -moz-max-content;
   min-height: max-content;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .w-28 {
@@ -1448,6 +1452,10 @@ video {
 
 .w-9 {
   width: 2.25rem;
+}
+
+.w-96 {
+  width: 24rem;
 }
 
 .w-\[100\%\] {
@@ -1505,26 +1513,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-16 {
-  width: 4rem;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-24 {
-  width: 6rem;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-96 {
-  width: 24rem;
 }
 
 .max-w-35 {
@@ -1621,6 +1609,10 @@ video {
   gap: 0.375rem;
 }
 
+.gap-10 {
+  gap: 2.5rem;
+}
+
 .gap-2 {
   gap: 0.5rem;
 }
@@ -1645,12 +1637,12 @@ video {
   gap: 1.25rem;
 }
 
-.gap-6 {
-  gap: 1.5rem;
+.gap-0 {
+  gap: 0px;
 }
 
-.gap-10 {
-  gap: 2.5rem;
+.gap-20 {
+  gap: 5rem;
 }
 
 .gap-x-4 {
@@ -1727,16 +1719,6 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-t-full {
-  border-top-left-radius: 9999px;
-  border-top-right-radius: 9999px;
-}
-
-.rounded-t-md {
-  border-top-left-radius: 0.375rem;
-  border-top-right-radius: 0.375rem;
-}
-
 .border-4 {
   border-width: 4px;
 }
@@ -1789,14 +1771,27 @@ video {
   background-color: rgb(0 0 0 / 0.5);
 }
 
+.bg-orange-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 215 170 / var(--tw-bg-opacity));
+}
+
 .bg-orange-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(253 186 116 / var(--tw-bg-opacity));
 }
 
+.bg-slate-100\/40 {
+  background-color: rgb(241 245 249 / 0.4);
+}
+
 .bg-teal-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(13 148 136 / var(--tw-bg-opacity));
+}
+
+.bg-transparent {
+  background-color: transparent;
 }
 
 .bg-white {
@@ -1806,41 +1801,6 @@ video {
 
 .bg-white\/20 {
   background-color: rgb(255 255 255 / 0.2);
-}
-
-.bg-red-200\/20 {
-  background-color: rgb(254 202 202 / 0.2);
-}
-
-.bg-blue-300\/20 {
-  background-color: rgb(147 197 253 / 0.2);
-}
-
-.bg-pink-400\/20 {
-  background-color: rgb(244 114 182 / 0.2);
-}
-
-.bg-transparent {
-  background-color: transparent;
-}
-
-.bg-slate-100\/40 {
-  background-color: rgb(241 245 249 / 0.4);
-}
-
-.bg-brown-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(150 114 89 / var(--tw-bg-opacity));
-}
-
-.bg-brown-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 193 172 / var(--tw-bg-opacity));
-}
-
-.bg-orange-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 215 170 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -1867,22 +1827,14 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-brown-600 {
-  --tw-gradient-from: #967259 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(150 114 89 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-brown-300 {
-  --tw-gradient-from: #DBC1AC var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(219 193 172 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .from-orange-300 {
   --tw-gradient-from: #fdba74 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(253 186 116 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-brown-300 {
+  --tw-gradient-to: #DBC1AC var(--tw-gradient-to-position);
 }
 
 .to-emerald-600 {
@@ -1891,10 +1843,6 @@ video {
 
 .to-orange-400 {
   --tw-gradient-to: #fb923c var(--tw-gradient-to-position);
-}
-
-.to-brown-300 {
-  --tw-gradient-to: #DBC1AC var(--tw-gradient-to-position);
 }
 
 .bg-cover {
@@ -1922,14 +1870,14 @@ video {
   padding: 1.25rem;
 }
 
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-}
-
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
 }
 
 .px-4 {
@@ -1947,14 +1895,19 @@ video {
   padding-right: 1.5rem;
 }
 
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
 
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+.py-14 {
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
 }
 
 .py-5 {
@@ -1967,29 +1920,14 @@ video {
   padding-bottom: 2rem;
 }
 
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
-.py-14 {
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
-}
-
-.px-32 {
-  padding-left: 8rem;
-  padding-right: 8rem;
-}
-
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
-
-.px-50 {
-  padding-left: 12.5rem;
-  padding-right: 12.5rem;
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .pb-1 {
@@ -2028,8 +1966,8 @@ video {
   padding-top: 1.5rem;
 }
 
-.pr-6 {
-  padding-right: 1.5rem;
+.pt-14 {
+  padding-top: 3.5rem;
 }
 
 .text-center {
@@ -2048,20 +1986,16 @@ video {
   font-family: samim;
 }
 
-.font-arabic-light {
-  font-family: arabicLight;
-}
-
-.font-Morabba-Regular {
-  font-family: Morabba-Regular;
+.font-arabic-Regular {
+  font-family: arabicRegular;
 }
 
 .font-arabic-bold {
   font-family: arabicBold;
 }
 
-.font-arabic-Regular {
-  font-family: arabicRegular;
+.font-arabic-light {
+  font-family: arabicLight;
 }
 
 .text-2xl {
@@ -2072,6 +2006,11 @@ video {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-base {
@@ -2099,14 +2038,8 @@ video {
   line-height: 1rem;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
+.text-\[10px\] {
+  font-size: 10px;
 }
 
 .font-bold {
@@ -2150,9 +2083,17 @@ video {
   color: rgb(253 186 116 / var(--tw-text-opacity));
 }
 
+.text-slate-800\/50 {
+  color: rgb(30 41 59 / 0.5);
+}
+
 .text-teal-600 {
   --tw-text-opacity: 1;
   color: rgb(13 148 136 / var(--tw-text-opacity));
+}
+
+.text-transparent {
+  color: transparent;
 }
 
 .text-white {
@@ -2175,19 +2116,6 @@ video {
   color: rgb(24 24 27 / var(--tw-text-opacity));
 }
 
-.text-transparent {
-  color: transparent;
-}
-
-.text-slate-800 {
-  --tw-text-opacity: 1;
-  color: rgb(30 41 59 / var(--tw-text-opacity));
-}
-
-.text-slate-800\/50 {
-  color: rgb(30 41 59 / 0.5);
-}
-
 .opacity-0 {
   opacity: 0;
 }
@@ -2203,10 +2131,6 @@ video {
   outline-offset: 2px;
 }
 
-.outline {
-  outline-style: solid;
-}
-
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -2219,12 +2143,6 @@ video {
 
 .backdrop-blur-md {
   --tw-backdrop-blur: blur(12px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-.backdrop-blur {
-  --tw-backdrop-blur: blur(8px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
@@ -2309,24 +2227,14 @@ video {
   color: rgb(255 255 255 / 0.4);
 }
 
-.hover\:bg-teal-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 118 110 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-brown-900:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(99 72 50 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-orange-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(253 186 116 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-brown-600:hover {
+.hover\:bg-teal-700:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(150 114 89 / var(--tw-bg-opacity));
+  background-color: rgb(15 118 110 / var(--tw-bg-opacity));
 }
 
 .hover\:text-orange-300:hover {
@@ -2416,6 +2324,14 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .sm\:flex {
+    display: flex;
+  }
+
   .sm\:h-10 {
     height: 2.5rem;
   }
@@ -2444,17 +2360,64 @@ video {
     width: 20rem;
   }
 
+  .sm\:w-96 {
+    width: 24rem;
+  }
+
   .sm\:max-w-64 {
     max-width: 16rem;
+  }
+
+  .sm\:flex-row {
+    flex-direction: row;
+  }
+
+  .sm\:flex-col {
+    flex-direction: column;
+  }
+
+  .sm\:items-start {
+    align-items: flex-start;
   }
 
   .sm\:gap-5 {
     gap: 1.25rem;
   }
 
+  .sm\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .sm\:gap-20 {
+    gap: 5rem;
+  }
+
+  .sm\:gap-0 {
+    gap: 0px;
+  }
+
   .sm\:px-11 {
     padding-left: 2.75rem;
     padding-right: 2.75rem;
+  }
+
+  .sm\:py-14 {
+    padding-top: 3.5rem;
+    padding-bottom: 3.5rem;
+  }
+
+  .sm\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .sm\:px-7 {
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
+  }
+
+  .sm\:text-right {
+    text-align: right;
   }
 
   .sm\:text-3xl {
@@ -2470,6 +2433,16 @@ video {
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .sm\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
 
@@ -2592,6 +2565,11 @@ video {
     padding-right: 2.5rem;
   }
 
+  .lg\:px-30 {
+    padding-left: 7.5rem;
+    padding-right: 7.5rem;
+  }
+
   .lg\:py-0 {
     padding-top: 0px;
     padding-bottom: 0px;
@@ -2629,6 +2607,11 @@ video {
     gap: 2rem;
   }
 
+  .xl\:px-50 {
+    padding-left: 12.5rem;
+    padding-right: 12.5rem;
+  }
+
   .xl\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -2664,24 +2647,18 @@ video {
   width: max-content;
 }
 
-.\[\&\>div\]\:w-32>div {
-  width: 8rem;
-}
-
-.\[\&\>div\]\:w-48>div {
-  width: 12rem;
-}
-
-.\[\&\>div\]\:w-4>div {
-  width: 1rem;
-}
-
-.\[\&\>div\]\:w-44>div {
-  width: 11rem;
-}
-
 .\[\&\>div\]\:w-40>div {
   width: 10rem;
+}
+
+.\[\&\>div\]\:w-20>div {
+  width: 5rem;
+}
+
+@media (min-width: 640px) {
+  .sm\:\[\&\>div\]\:w-40>div {
+    width: 10rem;
+  }
 }
 
 .\[\&\>li\:hover\]\:text-orange-300>li:hover {
@@ -2706,8 +2683,11 @@ video {
   transition-duration: 150ms;
 }
 
-.\[\&\>ul\]\:space-y-4>ul > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+.\[\&\>ul\>li\]\:text-sm>ul>li {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.\[\&\>ul\>li\]\:text-white\/70>ul>li {
+  color: rgb(255 255 255 / 0.7);
 }
