--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1214,6 +1214,14 @@ video {
   margin-top: 2rem;
 }
 
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -1340,6 +1348,10 @@ video {
   height: 98px;
 }
 
+.h-auto {
+  height: auto;
+}
+
 .h-full {
   height: 100%;
 }
@@ -1369,6 +1381,10 @@ video {
   min-height: 9rem;
 }
 
+.min-h-96 {
+  min-height: 24rem;
+}
+
 .min-h-\[340px\] {
   min-height: 340px;
 }
@@ -1384,6 +1400,10 @@ video {
 .min-h-max {
   min-height: -moz-max-content;
   min-height: max-content;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .w-28 {
@@ -1432,6 +1452,10 @@ video {
 
 .w-9 {
   width: 2.25rem;
+}
+
+.w-96 {
+  width: 24rem;
 }
 
 .w-\[100\%\] {
@@ -1553,6 +1577,10 @@ video {
   place-content: center;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-end {
   align-items: flex-end;
 }
@@ -1575,6 +1603,14 @@ video {
 
 .gap-1 {
   gap: 0.25rem;
+}
+
+.gap-1\.5 {
+  gap: 0.375rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
 }
 
 .gap-2 {
@@ -1601,12 +1637,12 @@ video {
   gap: 1.25rem;
 }
 
-.gap-\[6px\] {
-  gap: 6px;
+.gap-0 {
+  gap: 0px;
 }
 
-.gap-1\.5 {
-  gap: 0.375rem;
+.gap-20 {
+  gap: 5rem;
 }
 
 .gap-x-4 {
@@ -1633,6 +1669,10 @@ video {
 .divide-gray-100 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-divide-opacity));
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .overflow-y-auto {
@@ -1731,14 +1771,27 @@ video {
   background-color: rgb(0 0 0 / 0.5);
 }
 
+.bg-orange-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 215 170 / var(--tw-bg-opacity));
+}
+
 .bg-orange-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(253 186 116 / var(--tw-bg-opacity));
 }
 
+.bg-slate-100\/40 {
+  background-color: rgb(241 245 249 / 0.4);
+}
+
 .bg-teal-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(13 148 136 / var(--tw-bg-opacity));
+}
+
+.bg-transparent {
+  background-color: transparent;
 }
 
 .bg-white {
@@ -1774,6 +1827,16 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-orange-300 {
+  --tw-gradient-from: #fdba74 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(253 186 116 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-brown-300 {
+  --tw-gradient-to: #DBC1AC var(--tw-gradient-to-position);
+}
+
 .to-emerald-600 {
   --tw-gradient-to: #059669 var(--tw-gradient-to-position);
 }
@@ -1784,6 +1847,11 @@ video {
 
 .bg-cover {
   background-size: cover;
+}
+
+.bg-clip-text {
+  -webkit-background-clip: text;
+          background-clip: text;
 }
 
 .bg-\[center_top\] {
@@ -1800,6 +1868,11 @@ video {
 
 .p-5 {
   padding: 1.25rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-2 {
@@ -1822,9 +1895,19 @@ video {
   padding-right: 1.5rem;
 }
 
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.py-14 {
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
 }
 
 .py-5 {
@@ -1835,6 +1918,16 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .pb-1 {
@@ -1873,6 +1966,10 @@ video {
   padding-top: 1.5rem;
 }
 
+.pt-14 {
+  padding-top: 3.5rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1889,6 +1986,14 @@ video {
   font-family: samim;
 }
 
+.font-arabic-Regular {
+  font-family: arabicRegular;
+}
+
+.font-arabic-bold {
+  font-family: arabicBold;
+}
+
 .font-arabic-light {
   font-family: arabicLight;
 }
@@ -1901,6 +2006,11 @@ video {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-base {
@@ -1926,6 +2036,10 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-\[10px\] {
+  font-size: 10px;
 }
 
 .font-bold {
@@ -1969,9 +2083,17 @@ video {
   color: rgb(253 186 116 / var(--tw-text-opacity));
 }
 
+.text-slate-800\/50 {
+  color: rgb(30 41 59 / 0.5);
+}
+
 .text-teal-600 {
   --tw-text-opacity: 1;
   color: rgb(13 148 136 / var(--tw-text-opacity));
+}
+
+.text-transparent {
+  color: transparent;
 }
 
 .text-white {
@@ -2002,6 +2124,11 @@ video {
   --tw-shadow:  0px 1px 10px 0 rgba(0,0,0,0.2);
   --tw-shadow-colored: 0px 1px 10px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .filter {
@@ -2092,6 +2219,19 @@ video {
   transition-duration: 150ms;
 }
 
+.placeholder\:text-white\/40::-moz-placeholder {
+  color: rgb(255 255 255 / 0.4);
+}
+
+.placeholder\:text-white\/40::placeholder {
+  color: rgb(255 255 255 / 0.4);
+}
+
+.hover\:bg-orange-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 186 116 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-teal-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(15 118 110 / var(--tw-bg-opacity));
@@ -2100,6 +2240,11 @@ video {
 .hover\:text-orange-300:hover {
   --tw-text-opacity: 1;
   color: rgb(253 186 116 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:visible {
@@ -2179,6 +2324,14 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .sm\:flex {
+    display: flex;
+  }
+
   .sm\:h-10 {
     height: 2.5rem;
   }
@@ -2207,17 +2360,64 @@ video {
     width: 20rem;
   }
 
+  .sm\:w-96 {
+    width: 24rem;
+  }
+
   .sm\:max-w-64 {
     max-width: 16rem;
+  }
+
+  .sm\:flex-row {
+    flex-direction: row;
+  }
+
+  .sm\:flex-col {
+    flex-direction: column;
+  }
+
+  .sm\:items-start {
+    align-items: flex-start;
   }
 
   .sm\:gap-5 {
     gap: 1.25rem;
   }
 
+  .sm\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .sm\:gap-20 {
+    gap: 5rem;
+  }
+
+  .sm\:gap-0 {
+    gap: 0px;
+  }
+
   .sm\:px-11 {
     padding-left: 2.75rem;
     padding-right: 2.75rem;
+  }
+
+  .sm\:py-14 {
+    padding-top: 3.5rem;
+    padding-bottom: 3.5rem;
+  }
+
+  .sm\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .sm\:px-7 {
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
+  }
+
+  .sm\:text-right {
+    text-align: right;
   }
 
   .sm\:text-3xl {
@@ -2233,6 +2433,16 @@ video {
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .sm\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
 
@@ -2355,6 +2565,11 @@ video {
     padding-right: 2.5rem;
   }
 
+  .lg\:px-30 {
+    padding-left: 7.5rem;
+    padding-right: 7.5rem;
+  }
+
   .lg\:py-0 {
     padding-top: 0px;
     padding-bottom: 0px;
@@ -2392,6 +2607,11 @@ video {
     gap: 2rem;
   }
 
+  .xl\:px-50 {
+    padding-left: 12.5rem;
+    padding-right: 12.5rem;
+  }
+
   .xl\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -2413,10 +2633,6 @@ video {
   }
 }
 
-.\[\&\>\.product\]\:justify-self-center>.product {
-  justify-self: center;
-}
-
 .\[\&\>a\:hover\]\:text-orange-300>a:hover {
   --tw-text-opacity: 1;
   color: rgb(253 186 116 / var(--tw-text-opacity));
@@ -2429,6 +2645,20 @@ video {
 .\[\&\>a\]\:w-max>a {
   width: -moz-max-content;
   width: max-content;
+}
+
+.\[\&\>div\]\:w-40>div {
+  width: 10rem;
+}
+
+.\[\&\>div\]\:w-20>div {
+  width: 5rem;
+}
+
+@media (min-width: 640px) {
+  .sm\:\[\&\>div\]\:w-40>div {
+    width: 10rem;
+  }
 }
 
 .\[\&\>li\:hover\]\:text-orange-300>li:hover {
@@ -2451,4 +2681,13 @@ video {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.\[\&\>ul\>li\]\:text-sm>ul>li {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.\[\&\>ul\>li\]\:text-white\/70>ul>li {
+  color: rgb(255 255 255 / 0.7);
 }
