fix new product feature bag (responsive)

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -673,10 +673,10 @@ video {
   height: -moz-max-content;
   height: max-content;
   width: 100%;
-  max-width: 167px;
   flex-direction: column;
   justify-content: space-between;
   gap: 0.25rem;
+  justify-self: center;
   border-radius: 0.75rem;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -786,6 +786,7 @@ video {
 }
 
 .product .price-text {
+  overflow: hidden;
   text-wrap: nowrap;
   font-size: 0.75rem;
   line-height: 1rem;
@@ -1214,14 +1215,6 @@ video {
   margin-top: 2rem;
 }
 
-.mt-14 {
-  margin-top: 3.5rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
 .box-border {
   box-sizing: border-box;
 }
@@ -1348,10 +1341,6 @@ video {
   height: 98px;
 }
 
-.h-auto {
-  height: auto;
-}
-
 .h-full {
   height: 100%;
 }
@@ -1381,10 +1370,6 @@ video {
   min-height: 9rem;
 }
 
-.min-h-96 {
-  min-height: 24rem;
-}
-
 .min-h-\[340px\] {
   min-height: 340px;
 }
@@ -1400,10 +1385,6 @@ video {
 .min-h-max {
   min-height: -moz-max-content;
   min-height: max-content;
-}
-
-.w-16 {
-  width: 4rem;
 }
 
 .w-28 {
@@ -1452,10 +1433,6 @@ video {
 
 .w-9 {
   width: 2.25rem;
-}
-
-.w-96 {
-  width: 24rem;
 }
 
 .w-\[100\%\] {
@@ -1577,10 +1554,6 @@ video {
   place-content: center;
 }
 
-.items-start {
-  align-items: flex-start;
-}
-
 .items-end {
   align-items: flex-end;
 }
@@ -1609,10 +1582,6 @@ video {
   gap: 0.375rem;
 }
 
-.gap-10 {
-  gap: 2.5rem;
-}
-
 .gap-2 {
   gap: 0.5rem;
 }
@@ -1635,14 +1604,6 @@ video {
 
 .gap-5 {
   gap: 1.25rem;
-}
-
-.gap-0 {
-  gap: 0px;
-}
-
-.gap-20 {
-  gap: 5rem;
 }
 
 .gap-x-4 {
@@ -1669,10 +1630,6 @@ video {
 .divide-gray-100 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-divide-opacity));
-}
-
-.overflow-hidden {
-  overflow: hidden;
 }
 
 .overflow-y-auto {
@@ -1771,27 +1728,14 @@ video {
   background-color: rgb(0 0 0 / 0.5);
 }
 
-.bg-orange-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 215 170 / var(--tw-bg-opacity));
-}
-
 .bg-orange-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(253 186 116 / var(--tw-bg-opacity));
 }
 
-.bg-slate-100\/40 {
-  background-color: rgb(241 245 249 / 0.4);
-}
-
 .bg-teal-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(13 148 136 / var(--tw-bg-opacity));
-}
-
-.bg-transparent {
-  background-color: transparent;
 }
 
 .bg-white {
@@ -1827,16 +1771,6 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-orange-300 {
-  --tw-gradient-from: #fdba74 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(253 186 116 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.to-brown-300 {
-  --tw-gradient-to: #DBC1AC var(--tw-gradient-to-position);
-}
-
 .to-emerald-600 {
   --tw-gradient-to: #059669 var(--tw-gradient-to-position);
 }
@@ -1847,11 +1781,6 @@ video {
 
 .bg-cover {
   background-size: cover;
-}
-
-.bg-clip-text {
-  -webkit-background-clip: text;
-          background-clip: text;
 }
 
 .bg-\[center_top\] {
@@ -1868,11 +1797,6 @@ video {
 
 .p-5 {
   padding: 1.25rem;
-}
-
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
 }
 
 .px-2 {
@@ -1895,19 +1819,9 @@ video {
   padding-right: 1.5rem;
 }
 
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
-
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-}
-
-.py-14 {
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
 }
 
 .py-5 {
@@ -1918,16 +1832,6 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
 }
 
 .pb-1 {
@@ -1966,10 +1870,6 @@ video {
   padding-top: 1.5rem;
 }
 
-.pt-14 {
-  padding-top: 3.5rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1986,14 +1886,6 @@ video {
   font-family: samim;
 }
 
-.font-arabic-Regular {
-  font-family: arabicRegular;
-}
-
-.font-arabic-bold {
-  font-family: arabicBold;
-}
-
 .font-arabic-light {
   font-family: arabicLight;
 }
@@ -2006,11 +1898,6 @@ video {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
 }
 
 .text-base {
@@ -2036,10 +1923,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-\[10px\] {
-  font-size: 10px;
 }
 
 .font-bold {
@@ -2083,17 +1966,9 @@ video {
   color: rgb(253 186 116 / var(--tw-text-opacity));
 }
 
-.text-slate-800\/50 {
-  color: rgb(30 41 59 / 0.5);
-}
-
 .text-teal-600 {
   --tw-text-opacity: 1;
   color: rgb(13 148 136 / var(--tw-text-opacity));
-}
-
-.text-transparent {
-  color: transparent;
 }
 
 .text-white {
@@ -2124,11 +1999,6 @@ video {
   --tw-shadow:  0px 1px 10px 0 rgba(0,0,0,0.2);
   --tw-shadow-colored: 0px 1px 10px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.outline-none {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
 }
 
 .filter {
@@ -2219,19 +2089,6 @@ video {
   transition-duration: 150ms;
 }
 
-.placeholder\:text-white\/40::-moz-placeholder {
-  color: rgb(255 255 255 / 0.4);
-}
-
-.placeholder\:text-white\/40::placeholder {
-  color: rgb(255 255 255 / 0.4);
-}
-
-.hover\:bg-orange-300:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 186 116 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-teal-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(15 118 110 / var(--tw-bg-opacity));
@@ -2240,11 +2097,6 @@ video {
 .hover\:text-orange-300:hover {
   --tw-text-opacity: 1;
   color: rgb(253 186 116 / var(--tw-text-opacity));
-}
-
-.hover\:text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:visible {
@@ -2324,14 +2176,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:mb-0 {
-    margin-bottom: 0px;
-  }
-
-  .sm\:flex {
-    display: flex;
-  }
-
   .sm\:h-10 {
     height: 2.5rem;
   }
@@ -2360,64 +2204,21 @@ video {
     width: 20rem;
   }
 
-  .sm\:w-96 {
-    width: 24rem;
-  }
-
   .sm\:max-w-64 {
     max-width: 16rem;
   }
 
-  .sm\:flex-row {
-    flex-direction: row;
-  }
-
-  .sm\:flex-col {
-    flex-direction: column;
-  }
-
-  .sm\:items-start {
-    align-items: flex-start;
+  .sm\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .sm\:gap-5 {
     gap: 1.25rem;
   }
 
-  .sm\:gap-2 {
-    gap: 0.5rem;
-  }
-
-  .sm\:gap-20 {
-    gap: 5rem;
-  }
-
-  .sm\:gap-0 {
-    gap: 0px;
-  }
-
   .sm\:px-11 {
     padding-left: 2.75rem;
     padding-right: 2.75rem;
-  }
-
-  .sm\:py-14 {
-    padding-top: 3.5rem;
-    padding-bottom: 3.5rem;
-  }
-
-  .sm\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
-  .sm\:px-7 {
-    padding-left: 1.75rem;
-    padding-right: 1.75rem;
-  }
-
-  .sm\:text-right {
-    text-align: right;
   }
 
   .sm\:text-3xl {
@@ -2433,16 +2234,6 @@ video {
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .sm\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
-  .sm\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 }
 
@@ -2495,8 +2286,8 @@ video {
     min-height: 520px;
   }
 
-  .md\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -2565,11 +2356,6 @@ video {
     padding-right: 2.5rem;
   }
 
-  .lg\:px-30 {
-    padding-left: 7.5rem;
-    padding-right: 7.5rem;
-  }
-
   .lg\:py-0 {
     padding-top: 0px;
     padding-bottom: 0px;
@@ -2607,11 +2393,6 @@ video {
     gap: 2rem;
   }
 
-  .xl\:px-50 {
-    padding-left: 12.5rem;
-    padding-right: 12.5rem;
-  }
-
   .xl\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -2647,20 +2428,6 @@ video {
   width: max-content;
 }
 
-.\[\&\>div\]\:w-40>div {
-  width: 10rem;
-}
-
-.\[\&\>div\]\:w-20>div {
-  width: 5rem;
-}
-
-@media (min-width: 640px) {
-  .sm\:\[\&\>div\]\:w-40>div {
-    width: 10rem;
-  }
-}
-
 .\[\&\>li\:hover\]\:text-orange-300>li:hover {
   --tw-text-opacity: 1;
   color: rgb(253 186 116 / var(--tw-text-opacity));
@@ -2681,13 +2448,4 @@ video {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-}
-
-.\[\&\>ul\>li\]\:text-sm>ul>li {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.\[\&\>ul\>li\]\:text-white\/70>ul>li {
-  color: rgb(255 255 255 / 0.7);
 }
